# stellarspend-contracts

./: .gitignore  Cargo.toml  README.md
.github/workflows/: contract-ci.yml
circuits/spending_proof/: Nargo.toml  Prover.toml
circuits/spending_proof/sample_output/: PROOF_README.md
circuits/spending_proof/src/: main.nr
contracts/: compliance.rs  delegation.rs  fees.rs  lib.rs  multisig.rs  multisig_savings_integration.rs  multisig_savings_withdrawal.rs  multisig_savings_withdrawal_utils.rs  rate_limit.rs  savings.rs  transactions.rs
contracts/access-control/: README.md
contracts/access-control/src/: lib.rs  test.rs
contracts/activity-feed/src/: lib.rs  test.rs
contracts/admin/: admin_contract.rs  storage.rs
contracts/audit/src/: lib.rs  test.rs
contracts/balance/: Cargo.toml
contracts/balance/src/: lib.rs
contracts/batch-history/src/: lib.rs  logic.rs  test.rs  types.rs
contracts/batch-payment/: Cargo.toml
contracts/batch-payment/src/: lib.rs  test.rs  types.rs
contracts/batch-rewards/: ARCHITECTURE.md  Cargo.toml  cross.rs  utils.rs
contracts/batch-rewards/src/: decay.rs  lib.rs  test.rs  types.rs
contracts/batch-transfer/: Cargo.toml
contracts/batch-transfer/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/batch-wallet-creation/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/batch-wallet-creation/test_snapshots/test/: test_batch_create_wallets_events_emitted.1.json
contracts/benchmarks/: Cargo.toml
contracts/benchmarks/src/: lib.rs
contracts/budget/: Cargo.toml
contracts/budget-allocation/src/: lib.rs  types.rs
contracts/budget/src/: budge.rs  lib.rs  lib_feature.rs  lib_main.rs  merge.rs  pause.rs  storage.rs  test.rs  types.rs
contracts/budget_history/src/: budget_history.rs
contracts/category-analytics/: Cargo.toml
contracts/category-analytics/src/: events.rs  lib.rs  test.rs  types.rs
contracts/category-analytics/tests/: integration.rs
contracts/contract-upgrade/new_contract/: Cargo.toml
contracts/contract-upgrade/new_contract/src/: lib.rs
contracts/contract-upgrade/old_contract/src/: lib.rs  test.rs  upgrade_tests.rs
contracts/cross-contract/: Cargo.toml
contracts/currency-conversion/: Cargo.toml
contracts/currency-conversion/src/: lib.rs  math.rs  types.rs
contracts/escrow/: Cargo.toml
contracts/events/: Cargo.toml
contracts/fee/: Cargo.toml
contracts/fee/src/: auth.rs  bps_converter.rs  debug_log.rs  decay.rs  distribution.rs  escrow.rs  events.rs  fee_percentage.rs  fee_validation.rs  lib.rs  max_fee.rs  min_fee.rs  mod.rs  negative_check.rs  reconciliation.rs  safe_sub.rs  storage.rs  test.rs  utils.rs  validation.rs
contracts/fee/test_snapshots/: admin_can_toggle_lock_and_unlock.1.json  batch_collection_aggregates_fee_inputs_with_one_state_update.1.json  config_updates_work_after_unlock.1.json  fees_are_held_then_released_from_escrow.1.json  lock_prevents_fee_bps_changes.1.json  pending_fees_roll_over_between_cycles_without_duplication.1.json  releasing_without_pending_fees_panics.1.json
contracts/fee/tests/: batching.rs  decay.rs  escrow.rs  get_fee_config.rs  min_fee.rs  reconciliation.rs  validation.rs
contracts/goals/src/: goal.rs  lib.rs  migration.rs  storage.rs  tests.rs
contracts/merchant-tagging/: Cargo.toml
contracts/merchant-tagging/src/: events.rs  lib.rs  types.rs
contracts/merchant-tagging/tests/: merchant_tagging_tests.rs
contracts/multi-currency-wallet/: Cargo.toml
contracts/multi-currency-wallet/src/: lib.rs  validation.rs
contracts/penalty/: withdrawal.rs
contracts/recurring-payment/src/: lib.rs  test.rs  types.rs
contracts/savings-goals/: Cargo.toml
contracts/savings-goals/src/: lib.rs  test.rs  types.rs  validation.rs
contracts/savings/src/: lib.rs  limits.rs  rewards.rs  storage.rs  types.rs
contracts/shared/: Cargo.toml
contracts/shared-budgets/src/: lib.rs  test.rs  types.rs
contracts/shared/src/: assets.rs  auth.rs  errors.rs  events.rs  lib.rs  sanitizer.rs  test.rs  utils.rs  validation.rs
contracts/spending-categories/: Cargo.toml
contracts/spending-categories/src/: lib.rs  test.rs  validation.rs
contracts/spending-digest/: events.rs  lib.rs  logic.rs  state.rs  tests.rs  types.rs
contracts/spending-digest/src/: forecast.rs  model.rs  update.rs
contracts/spending-limits/src/: cross_contract.rs  errors.rs  lib.rs  storage.rs  test.rs  types.rs  validation.rs
contracts/src/: fee.rs  lib.rs  storage.rs  test.rs
contracts/stellarspend-fee/: fee.rs  storage.rs  test.rs
contracts/tests/: concurrent_spending_tests.rs  fee_tests.rs
contracts/transact/src/: lib.rs  libss.rs  trans.rs
contracts/transaction-analytics/src/: analytics.rs  fees.rs  lib.rs  test.rs  types.rs  validation.rs
contracts/transaction-memo/: Cargo.toml
contracts/transaction-memo/src/: lib.rs  test.rs  validation.rs
contracts/transaction-validation/src/: validation.rs
contracts/transaction/src/: lib.rs
contracts/transactional/src/: lib.rs  libb.rs
contracts/transactions/: Cargo.toml
contracts/transactions/src/: lib.rs  storage.rs  test.rs  utils.rs
contracts/transfer/src/: lib.rs  test.rs
contracts/treasury/src/: lib.rs
contracts/user/src/: lib.rs
contracts/users/: Cargo.toml
contracts/users/src/: lib.rs  storage.rs  test.rs
contracts/wallet-profile/: Cargo.toml
contracts/wallet-profile/src/: lib.rs
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
docs/: integration_guide.md  multisig_savings_withdrawals.md
scripts/: generate_proof.sh
tests/: batch_savings_tests.rs  currency_conversion_tests.rs  multisig_savings_withdrawal_tests.rs  multisig_tests.rs  rate_limit_tests.rs
