[package]
name = "batch-rewards"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Batch rewards distribution contract for StellarSpend"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
