[package]
name = "batch-transfer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Batch XLM transfer contract for StellarSpend"
#pub struct BatchHistoryContract;
[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
