[package]
name = "stellarspend-benchmarks"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
budget = { path = "../budget" }
savings-goals = { path = "../savings-goals" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
budget = { path = "../budget", features = ["testutils"] }
savings-goals = { path = "../savings-goals", features = ["testutils"] }
