[package]
name = "category-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "On-chain budget category analytics contract for StellarSpend"
autotests = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
