[package]
name = "currency-conversion"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Budget currency conversion utilities for StellarSpend contracts"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
