[package]
name = "escrow"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Batch escrow reversal contract for StellarSpend"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
