[package]
name    = "staking-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
testutils = ["soroban-sdk/testutils"]
//pub struct BatchHistoryContract;
[dependencies]
soroban-sdk = { version = "20.0.0" }

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[profile.release]
opt-level     = "z"
overflow-checks = true
debug         = false
strip         = "symbols"
debug-assertions = false
panic         = "abort"
codegen-units = 1
lto           = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true