[package]
name = "fee"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fee escrow, rollover, batching, and lock contract for StellarSpend"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
shared = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
